Fix mobile logo size and backstretch import

--- a/predictor/src/main/resources/assets/css/media-queries.css
+++ b/predictor/src/main/resources/assets/css/media-queries.css
@@ -95,9 +95,6 @@
 	/* intro styles
 	------------------------------------------------------------------ */
 	header #logo {	
-		top: 30px;	
-		width: 90px;
-		margin-left: -45px;			
 	}
 
 	/* primary navigation
